--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,6 @@
 [context.production]
   environment = { NODE_VERSION = "14.16.0" }
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Security-Policy = "default-src 'self';"
