--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,4 @@
   for = "/*"
   [headers.values]
     Content-Security-Policy = "default-src 'self';"
-    X-Frame-Options: SAMEORIGIN;
+    X-Frame-Options: "SAMEORIGIN";
