--- a/netlify.toml
+++ b/netlify.toml
@@ -4,5 +4,5 @@
   for = "/*"
   [headers.values]
     Content-Security-Policy = "default-src 'self';"
-    X-Frame-Options = "DENY";
+    X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
