--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,5 @@
     Content-Security-Policy = "default-src 'self';"
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options: "nosniff"
+    Referrer-Policy: "same-origin"
