--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,4 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "same-origin"
+    Permissions-Policy = "fullscreen=()"
